mType/tests/testFiles/annotation/pass/annotation_const_imported_helper.mt
// MYT-376 helper: provides a static-final constant imported by
// annotation_const_imported_pass.mt. Not registered as a standalone test.
class Cfg {
    public static final int VALUE = 99;
}
